Update update.sh